--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin:'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 28
@@ -18,10 +19,25 @@ android {
     }
 }
 
+greendao{
+    schemaVersion 1 // 数据库版本号
+    daoPackage  'com.sos.www.bean.dao'//greenDao 自动生成的代码保存的包名
+    targetGenDir 'src/main/java'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //Toasty
+    implementation 'com.github.GrenderG:Toasty:1.4.0'
+    //GreenDAO
+    implementation 'org.greenrobot:greendao:3.2.2' // add library
+    implementation 'net.zetetic:android-database-sqlcipher:3.5.7@aar' //加密
+
+    //RxPermissions
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
