--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.sos.www">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -16,13 +15,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-         <activity android:name=".ui.activity.NewContactActivity">
-             <intent-filter>
-                 <action android:name="android.new.contact"/>
-                 <category android:name="android.intent.category.DEFAULT" />
-             </intent-filter>
-         </activity>
-        <!--<activity android:name=".ui.activity.SettingsActivity"></activity>-->
+        <activity android:name=".ui.activity.NewContactActivity">
+            <intent-filter>
+                <action android:name="com.sos.www.newContact" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.activity.SettingsActivity">
+            <intent-filter>
+                <action android:name="com.sos.www.setting" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <service
+            android:name=".service.MyService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
