--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,19 +26,20 @@ greendao{
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     //Toasty
     implementation 'com.github.GrenderG:Toasty:1.4.0'
     //GreenDAO
-    implementation 'org.greenrobot:greendao:3.2.2' // add library
-    implementation 'net.zetetic:android-database-sqlcipher:3.5.7@aar' //加密
-
+    implementation 'org.greenrobot:greendao:3.2.2'
+    // add library
+    implementation 'net.zetetic:android-database-sqlcipher:3.5.7@aar'
+    //加密
     //RxPermissions
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation files('libs/AMap_Location_V4.5.0_20190121.jar')
 }
